# Projektas3.0

./: CMakeLists.txt  ProjectInstallSetup.msi  Projektas3.0.sln  README.md
ProjectInstallSetup/: ProjectInstallSetup.vdproj
Projektas3.0/: Projektas3.0.cpp  Projektas3.0.vcxproj  Projektas3.0.vcxproj.filters  gudruciai_l1.txt  gudruciai_l2.txt  gudruciai_v2.txt  gudruciai_vektorius1.txt  isvedimas.cpp  isvedimas.h  klausimai.cpp  klausimai.h  nuskaityti_duomenys.cpp  nuskaityti_duomenys.h  pazymiai.cpp  pazymiai.h  random.cpp  random.h  rezultatai1.txt  rezultatai2.txt  rusiavimas.cpp  rusiavimas.h  skaiciavimai.cpp  skaiciavimai.h  studentai.cpp  studentai.h  studentai_faile.cpp  studentai_faile.h  studentas.h  studento_sukurimas.cpp  studento_sukurimas.h  vargseliai_l2.txt  vargseliai_list1.txt  vargseliai_v1.txt  vargseliai_v2.txt
v3.0/: v3.0.vdproj
